--- a/scribbletex/package.json
+++ b/scribbletex/package.json
@@ -2,7 +2,7 @@
   "name": "scribbletex",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://NamkhangNLe.github.io/scribbletex",
+  "homepage": "https://namkhangnle.github.io/ScribbleTex/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
